Refactored the extended relation builder to better support extended attributes